tests/parser-test-files/bad-files/define-class.6.error
error: Malformed class definition
  --> test:4:14
   |
 4 |  (define-class C)
   |                ^ expected class type variable(s)
help: add class type variable `:a`
 4 | (define-class (C :a))
   |               ------
